--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/router": "~11.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.6.0",
+    "core-js": "^3.10.0",
+    "jw-bootstrap-switch-ng2": "^2.0.5",
     "ng-lazyload-image": "^9.1.0",
+    "ng2-nouislider": "^1.8.2",
+    "nouislider": "^14.6.3",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
@@ -33,6 +38,7 @@
     "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/nouislider": "^9.0.10",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
