--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
 					  "polyfills": "src/polyfills.ts",
 					  "assets": [
 						"src/assets",
-						"src/favicon.ico"
+						"src/favicon.ico",
+						"src/_redirects"
 					  ],
 					  "styles": [
 						"node_modules/bootstrap/dist/css/bootstrap.min.css",
