--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ng-lazyload-image": "^9.1.0",
     "ng2-nouislider": "^1.8.2",
     "ngx-mask": "^11.1.5",
+    "node-correios": "^3.0.2",
     "nouislider": "^14.6.3",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.7",
